<resources>
    <string name="app_name">NoteAppAndroid</string>
    <string name="my_notes">My Notes</string>
    <string name="search">Search</string>
    <string name="note_tittle">Note Tittle</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_text_here">Type text here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
</resources>