<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_E8"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/childConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backImage"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/margin_18"
                    android:layout_marginTop="@dimen/margin_32"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/doneImage"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/margin_18"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_32"
                    android:src="@drawable/ic_check_circle"
                    app:layout_constraintBottom_toBottomOf="@id/backImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/titleNote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_18"
                    android:layout_marginEnd="@dimen/margin_32"
                    android:background="@android:color/transparent"
                    android:hint="@string/note_tittle"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white_75"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/backImage"
                    app:layout_constraintTop_toBottomOf="@id/backImage" />

                <TextView
                    android:id="@+id/dateTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="10/11/2022"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_10"
                    app:layout_constraintStart_toStartOf="@id/titleNote"
                    app:layout_constraintTop_toBottomOf="@id/titleNote" />

                <View
                    android:id="@+id/indicatorView"
                    android:layout_width="5dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_12"
                    android:background="@drawable/yellow_indicator"
                    app:layout_constraintStart_toStartOf="@id/titleNote"
                    app:layout_constraintTop_toBottomOf="@id/dateTimeTextView" />

                <EditText
                    android:id="@+id/subtitleNote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_18"
                    android:layout_marginEnd="@dimen/margin_32"
                    android:layout_marginBottom="@dimen/margin_12"
                    android:background="@android:color/transparent"
                    android:hint="@string/note_subtitle"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white_75"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintBottom_toBottomOf="@id/indicatorView"
                    app:layout_constraintEnd_toEndOf="@id/childConstraint"
                    app:layout_constraintStart_toEndOf="@id/indicatorView"
                    app:layout_constraintTop_toTopOf="@id/indicatorView" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="@id/subtitleNote"
                    android:layout_marginTop="@dimen/margin_12"
                    app:layout_constraintStart_toStartOf="@id/indicatorView"
                    app:layout_constraintTop_toBottomOf="@id/indicatorView" />

                <EditText
                    android:id="@+id/contentNote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_18"
                    android:layout_marginTop="@dimen/margin_18"
                    android:layout_marginEnd="@dimen/margin_18"
                    android:layout_marginBottom="@dimen/margin_12"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/type_text_here"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white_75"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintBottom_toBottomOf="@id/childConstraint"
                    app:layout_constraintEnd_toEndOf="@id/childConstraint"
                    app:layout_constraintStart_toStartOf="@id/childConstraint"
                    app:layout_constraintTop_toBottomOf="@id/imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    <include layout="@layout/layout_miscellaneous" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>



